<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:padding="5dp">
   
   <TextView
       android:id="@+id/youtubeIdLabel"
       android:text="@string/youtubevideoid"
       android:layout_width="wrap_content"
   	   android:layout_height="wrap_content"
   />
   
	<EditText 
	     android:id="@+id/youtubeIdText"
       android:text="@string/defaultYoutubeVideoId"
       android:layout_width="fill_parent"
   	   android:layout_height="wrap_content"
	    />
	
	<Button 
	     android:id="@+id/viewVideoButton"
       android:text="@string/viewVideoButton"
       android:layout_width="fill_parent"
   	   android:layout_height="wrap_content"
	    />
    
    
</LinearLayout>    