<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

  
    <Gallery
        android:id="@+id/gallery1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    	
     <ImageButton
        android:id="@+id/iconWifi"
        android:contentDescription="@string/button_iconWifi"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:src="@drawable/ic_wifi_icon"/>

     <ImageButton
         android:id="@+id/iconFire"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/button_iconFire"
         android:src="@drawable/ic_fire_icon" />
    
     <ImageView
        android:id="@+id/Gallery02"
        android:contentDescription="@string/seleccionada"
        android:layout_marginTop="100dp"
        android:layout_width="500dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="250dp"
        android:src="@drawable/programacion" />
     
    

 </RelativeLayout>