<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	tools:context=".LoginActivity"
	android:background="@drawable/fondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.33"
        android:background="@drawable/ic_fondo_mdpi"
        android:padding="5dp" >

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtEmail"
            android:layout_below="@+id/txtEmail"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:textColorHint="@color/Black" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textArte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/Arte"
            android:textAppearance="@style/AppBaseTheme"
            android:textColor="@color/Black"
            android:textColorLink="@color/Black"
            android:textSize="40sp"
            android:textStyle="bold|bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textArte"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="@+id/txtEmail"
            android:hint="@string/txtEmail"
            android:textColorHint="@color/Black" />

        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp"
            android:text="@string/button_registrarse" />

        <Button
            android:id="@+id/buttonLogin"
            style="@color/Blue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtPassword"
            android:layout_below="@+id/txtPassword"
            android:layout_marginTop="24dp"
            android:text="@string/button_login" />

        <TextView
            android:id="@+id/buttonRecuperarPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textArte"
            android:layout_below="@+id/buttonLogin"
            android:layout_marginTop="14dp"
            android:text="@string/button_recuperarPass"
            android:textSize="10sp"
            android:textStyle="normal"
            android:typeface="normal" />

    </RelativeLayout>

    <!-- <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="162dp"
        android:orientation="horizontal" >

        	<RelativeLayout
            	android:layout_width="162dp"
            	android:layout_height="wrap_content" 
            	android:paddingRight="5dp"
            	android:paddingLeft="5dp">
			</RelativeLayout>
		</LinearLayout> -->

    

</LinearLayout>
